--- a/SampleRazorApp/Pages/Other.cshtml
+++ b/SampleRazorApp/Pages/Other.cshtml
@@ -7,4 +7,42 @@
 <div>
     <h1 class="display-4 mb-4">Other Page</h1>
     <p class="h4">@Model.Message</p>
+    @using (Html.BeginForm())
+    {
+        <div class="form-group">
+            <label class="form-lagel h5">
+                @Html.CheckBoxFor(model => model.check, new { @class = "form-check-input" })
+                @Html.DisplayName("CheckBox1")
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="form-check-lagel h5">
+                @Html.RadioButtonFor(model => model.gender, Gender.male,  new { @class = "form-check-input" })
+                @Html.DisplayName("male")
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="form-check-lagel h5">
+                @Html.RadioButtonFor(model => model.gender, Gender.female, new { @class = "form-check-input" })
+                @Html.DisplayName("female")
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="form-lagel h5">
+                @Html.DisplayName("PC")
+                @Html.DropDownListFor(model => model.pc, new SelectList(Enum.GetValues(typeof(Platform))), new { @class = "form-control" })
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label class="form-lagel h5">
+                @Html.DisplayName("PC2")
+                @Html.ListBoxFor(model => model.pc2, new MultiSelectList(Enum.GetValues(typeof(Platform))), new { @class = "form-control", size = 5 })
+            </label>
+        </div>
+        <div><input type="submit" /></div>
+    }
 </div>
