--- a/SampleRazorApp/Pages/Index.cshtml
+++ b/SampleRazorApp/Pages/Index.cshtml
@@ -17,6 +17,9 @@
         return $"Hello {name}!!";
     }
 }
+@section Between{
+    <p class="container alert alert-primary">Index.cshtmlで生成</p>
+}
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
