--- a/SampleRazorApp/Pages/Shared/_Layout.cshtml
+++ b/SampleRazorApp/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
             </div>
         </nav>
     </header>
+    @RenderSection("Between", required: false)
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
