--- a/SampleRazorApp/Pages/Other.cshtml
+++ b/SampleRazorApp/Pages/Other.cshtml
@@ -3,6 +3,14 @@
 @{
     ViewData["Title"] = "Other page";
 }
+@section Between {
+    <div class="container card" style="width: 30rem;">
+        <div class="card-body">
+            <h5 class="card-title">※BETWEEN CONTENT</h5>
+            <p class="card-text">Other.cshtmlで生成</p>
+        </div>
+    </div>
+}
 
 <div>
     <h1 class="display-4 mb-4">Other Page</h1>
