テスト用変更

--- a/SampleRazorApp/Pages/Index.cshtml
+++ b/SampleRazorApp/Pages/Index.cshtml
@@ -23,6 +23,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <h2>Hello Razor Pages on Azure</h2>
     <p class="h4">@Model.Message</p>
     <form asp-page="Index">
         <div class="form-group">
